Add RejectNegative for a c option.
	PR c/78933
	* g++.dg/pr78933.C: New test.
	PR c/78933
	* c.opt (strong-eval-order): Add RejectNegative keyword.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@243960 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2016-12-29  Martin Liska  <mliska@suse.cz>
+
+	PR c/78933
+	* g++.dg/pr78933.C: New test.
+
 2016-12-28  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR target/78904
