--- a/gcc/c-family/ChangeLog
+++ b/gcc/c-family/ChangeLog
@@ -1,3 +1,8 @@
+2016-12-29  Martin Liska  <mliska@suse.cz>
+
+	PR c/78933
+	* c.opt (strong-eval-order): Add RejectNegative keyword.
+
 2016-12-22  Jason Merrill  <jason@redhat.com>
 
 	Implement P0522R0, matching of template template arguments.
