* doc/extend.texi (Cilk Plus Builtins): cilkplus.org now uses         https by default.         * doc/passes.texi (Cilk Plus Transformation): Ditto.         * doc/generic.texi (Statements for C++): Ditto, and use @uref.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@243962 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2016-12-29  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* doc/extend.texi (Cilk Plus Builtins): cilkplus.org now uses
+	https by default.
+	* doc/passes.texi (Cilk Plus Transformation): Ditto.
+	* doc/generic.texi (Statements for C++): Ditto, and use @uref.
+
 2016-12-28  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR target/78904
