--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2016-12-29  Michael Meissner  <meissner@linux.vnet.ibm.com>
+
+	* config/rs6000/rs6000.c (altivec_expand_builtin): Fix typos in
+	error messages.
+
 2016-12-29  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* doc/extend.texi (Cilk Plus Builtins): cilkplus.org now uses
