--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -2780,33 +2780,6 @@
   [(set_attr "type" "imovx")
    (set_attr "mode" "SI")])
 
-(define_insn "*extvqi"
-  [(set (match_operand:QI 0 "nonimmediate_operand" "=QBc,?R,m")
-        (sign_extract:QI (match_operand 1 "ext_register_operand" "Q,Q,Q")
-                         (const_int 8)
-                         (const_int 8)))]
-  ""
-{
-  switch (get_attr_type (insn))
-    {
-    case TYPE_IMOVX:
-      return "movs{bl|x}\t{%h1, %k0|%k0, %h1}";
-    default:
-      return "mov{b}\t{%h1, %0|%0, %h1}";
-    }
-}
-  [(set_attr "isa" "*,*,nox64")
-   (set (attr "type")
-     (if_then_else (and (match_operand:QI 0 "register_operand")
-			(ior (not (match_operand:QI 0 "QIreg_operand"))
-			     (match_test "TARGET_MOVX")))
-	(const_string "imovx")
-	(const_string "imov")))
-   (set (attr "mode")
-     (if_then_else (eq_attr "type" "imovx")
-	(const_string "SI")
-	(const_string "QI")))])
-
 (define_expand "extzv<mode>"
   [(set (match_operand:SWI248 0 "register_operand")
 	(zero_extract:SWI248 (match_operand:SWI248 1 "register_operand")
@@ -7586,7 +7559,8 @@
   emit_insn (gen_divmodhiqi3 (tmp0, tmp1, operands[2]));
 
   /* Extract remainder from AH.  */
-  tmp1 = gen_rtx_SIGN_EXTRACT (QImode, tmp0, GEN_INT (8), GEN_INT (8));
+  tmp1 = gen_rtx_ZERO_EXTRACT (SImode, tmp0, GEN_INT (8), GEN_INT (8));
+  tmp1 = gen_rtx_SUBREG (QImode, tmp1, 0);
   rtx_insn *insn = emit_move_insn (operands[3], tmp1);
 
   mod = gen_rtx_MOD (QImode, operands[1], operands[2]);
