* config/i386/i386.md (divmodqi4): Use lowpart_subreg.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@243969 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -7553,14 +7553,13 @@
   tmp0 = gen_reg_rtx (HImode);
   tmp1 = gen_reg_rtx (HImode);
 
-  /* Extend operands[1] to HImode.  Generate 8bit divide.  Result is
-     in AX.  */
+  /* Extend operands[1] to HImode.  Generate 8bit divide.  Result is in AX.  */
   emit_insn (gen_extendqihi2 (tmp1, operands[1]));
   emit_insn (gen_divmodhiqi3 (tmp0, tmp1, operands[2]));
 
   /* Extract remainder from AH.  */
   tmp1 = gen_rtx_ZERO_EXTRACT (SImode, tmp0, GEN_INT (8), GEN_INT (8));
-  tmp1 = gen_rtx_SUBREG (QImode, tmp1, 0);
+  tmp1 = lowpart_subreg (QImode, tmp1, SImode);
   rtx_insn *insn = emit_move_insn (operands[3], tmp1);
 
   mod = gen_rtx_MOD (QImode, operands[1], operands[2]);
