--- a/gcc/doc/standards.texi
+++ b/gcc/doc/standards.texi
@@ -261,14 +261,8 @@ works with the Apple/NeXT Objective-C runtime library.
 There is no formal written standard for Objective-C or Objective-C++@.
 The authoritative manual on traditional Objective-C (1.0) is
 ``Object-Oriented Programming and the Objective-C Language'':
-@itemize
-@item
 @uref{http://www.gnustep.org/@/resources/@/documentation/@/ObjectivCBook.pdf}
-is the original NeXTstep document;
-@item
-@uref{http://objc.toodarkpark.net}
-is the same document in another format.
-@end itemize
+is the original NeXTstep document.
 
 The Objective-C exception and synchronization syntax (that is, the
 keywords @code{@@try}, @code{@@throw}, @code{@@catch},
