--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -2766,7 +2766,10 @@
   if (INTVAL (operands[2]) != 8 || INTVAL (operands[3]) != 8)
     FAIL;
 
-  if (! ext_register_operand (operands[1], VOIDmode))
+  unsigned int regno = reg_or_subregno (operands[1]);
+
+  /* Be careful to expand only with registers having upper parts.  */
+  if (regno <= LAST_VIRTUAL_REGISTER && !QI_REGNO_P (regno))
     operands[1] = copy_to_reg (operands[1]);
 })
 
@@ -2794,7 +2797,10 @@
   if (INTVAL (operands[2]) != 8 || INTVAL (operands[3]) != 8)
     FAIL;
 
-  if (! ext_register_operand (operands[1], VOIDmode))
+  unsigned int regno = reg_or_subregno (operands[1]);
+
+  /* Be careful to expand only with registers having upper parts.  */
+  if (regno <= LAST_VIRTUAL_REGISTER && !QI_REGNO_P (regno))
     operands[1] = copy_to_reg (operands[1]);
 })
 
@@ -2878,10 +2884,13 @@
   if (INTVAL (operands[1]) != 8 || INTVAL (operands[2]) != 8)
     FAIL;
 
-  dst = operands[0];
-  
-  if (!ext_register_operand (dst, VOIDmode))
-    dst = copy_to_reg (dst);
+  unsigned int regno = reg_or_subregno (operands[0]);
+
+  /* Be careful to expand only with registers having upper parts.  */
+  if (regno <= LAST_VIRTUAL_REGISTER && !QI_REGNO_P (regno))
+    dst = copy_to_reg (operands[0]);
+  else
+    dst = operands[0];
 
   emit_insn (gen_insv<mode>_1 (dst, operands[3]));
 
