gcc/ 	* gcc.c (process_command): Update copyright notice dates. 	* gcov-dump.c (print_version): Ditto. 	* gcov.c (print_version): Ditto. 	* gcov-tool.c (print_version): Ditto. 	* gengtype.c (create_file): Ditto. 	* doc/cpp.texi: Bump @copying's copyright year. 	* doc/cppinternals.texi: Ditto. 	* doc/gcc.texi: Ditto. 	* doc/gccint.texi: Ditto. 	* doc/gcov.texi: Ditto. 	* doc/install.texi: Ditto. 	* doc/invoke.texi: Ditto. gcc/fortran/ 	* gfortranspec.c (lang_specific_driver): Update copyright notice 	dates. 	* gfc-internals.texi: Bump @copying's copyright year. 	* gfortran.texi: Ditto. 	* intrinsic.texi: Ditto. 	* invoke.texi: Ditto. gcc/ada/ 	* gnat_ugn.texi: Bump @copying's copyright year. 	* gnat_rm.texi: Likewise. gcc/go/ 	* gccgo.texi: Bump @copyrights-go year. libitm/ 	* libitm.texi: Bump @copying's copyright year. libgomp/ 	* libgomp.texi: Bump @copying's copyright year. libquadmath/ 	* libquadmath.texi: Bump @copying's copyright year.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@243992 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/go/ChangeLog
+++ b/gcc/go/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-01  Jakub Jelinek  <jakub@redhat.com>
+
+	* gccgo.texi: Bump @copyrights-go year.
+
 2016-12-16  Than McIntosh  <thanm@google.com>
 
 	* go-gcc.cc (Gcc_backend::expression_statement): Add Bfunction*
@@ -1340,7 +1344,7 @@
 
 	Go frontend added to gcc repository.
 
-Copyright (C) 2010-2016 Free Software Foundation, Inc.
+Copyright (C) 2010-2017 Free Software Foundation, Inc.
 
 Copying and distribution of this file, with or without modification,
 are permitted in any medium without royalty provided the copyright
