PR middle-end/77674 	* symtab.c (symtab_node::binds_to_current_def_p): Fix handling of 	transparent aliases.
	PR middle-end/77674
	* g++.dg/torture/pr77674.C: New testcase.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@243997 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-01  Jan Hubicka  <hubicka@ucw.cz>
+
+	PR middle-end/77674
+	* g++.dg/torture/pr77674.C: New testcase.
+
 2017-01-01  Jakub Jelinek  <jakub@redhat.com>
 
 	Update copyright years.
