* doc/cfg.texi (Edges): Remove reference to Java. 	(Maintaining the CFG): Ditto.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244002 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-02  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* doc/cfg.texi (Edges): Remove reference to Java.
+	(Maintaining the CFG): Ditto.
+
 2017-01-01  Jan Hubicka  <hubicka@ucw.cz>
 
 	PR middle-end/77674
