--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -114,6 +114,7 @@
   UNSPEC_STOS
   UNSPEC_PEEPSIB
   UNSPEC_INSN_FALSE_DEP
+  UNSPEC_NOREX_MEM
 
   ;; For SSE/MMX support:
   UNSPEC_FIX_NOTRUNC
@@ -2819,7 +2820,8 @@
 	(subreg:QI
 	  (zero_extract:SI (match_operand 1 "ext_register_operand" "Q")
 			   (const_int 8)
-			   (const_int 8)) 0))]
+			   (const_int 8)) 0))
+   (unspec [(const_int 0)] UNSPEC_NOREX_MEM)]
   "TARGET_64BIT && reload_completed"
   "mov{b}\t{%h1, %0|%0, %h1}"
   [(set_attr "type" "imov")
@@ -2862,11 +2864,13 @@
    (set (match_operand:QI 2 "norex_memory_operand") (match_dup 0))]
   "TARGET_64BIT
    && peep2_reg_dead_p (2, operands[0])"
-  [(set (match_dup 2)
-	(subreg:QI
-	  (zero_extract:SI (match_dup 1)
-			   (const_int 8)
-			   (const_int 8)) 0))])
+  [(parallel
+     [(set (match_dup 2)
+	   (subreg:QI
+	     (zero_extract:SI (match_dup 1)
+			      (const_int 8)
+			      (const_int 8)) 0))
+      (unspec [(const_int 0)] UNSPEC_NOREX_MEM)])])
 
 (define_expand "insv<mode>"
   [(set (zero_extract:SWI248 (match_operand:SWI248 0 "register_operand")
@@ -2916,7 +2920,59 @@
    (set_attr "type" "imov")
    (set_attr "mode" "QI")])
 
-(define_insn "*insvqi"
+(define_insn "*insvqi_1_mem_rex64"
+  [(set (zero_extract:SI (match_operand 0 "ext_register_operand" "+Q")
+			 (const_int 8)
+			 (const_int 8))
+	(subreg:SI
+	  (match_operand:QI 1 "norex_memory_operand" "Bn") 0))
+   (unspec [(const_int 0)] UNSPEC_NOREX_MEM)]
+  "TARGET_64BIT && reload_completed"
+  "mov{b}\t{%1, %h0|%h0, %1}"
+  [(set_attr "type" "imov")
+   (set_attr "mode" "QI")])
+
+(define_insn "*insvqi_1"
+  [(set (zero_extract:SI (match_operand 0 "ext_register_operand" "+Q,Q")
+			 (const_int 8)
+			 (const_int 8))
+	(subreg:SI
+	  (match_operand:QI 1 "general_operand" "QnBc,m") 0))]
+  ""
+  "mov{b}\t{%1, %h0|%h0, %1}"
+  [(set_attr "isa" "*,nox64")
+   (set_attr "type" "imov")
+   (set_attr "mode" "QI")])
+
+(define_peephole2
+  [(set (match_operand:QI 0 "register_operand")
+	(match_operand:QI 1 "norex_memory_operand"))
+   (set (zero_extract:SI (match_operand 2 "ext_register_operand")
+			 (const_int 8)
+			 (const_int 8))
+	(subreg:SI (match_dup 0) 0))]
+  "TARGET_64BIT
+   && peep2_reg_dead_p (2, operands[0])"
+  [(parallel
+     [(set (zero_extract:SI (match_dup 2)
+			    (const_int 8)
+			    (const_int 8))
+	   (subreg:SI (match_dup 1) 0))
+      (unspec [(const_int 0)] UNSPEC_NOREX_MEM)])])
+
+(define_insn "*insvqi_2"
+  [(set (zero_extract:SI (match_operand 0 "ext_register_operand" "+Q")
+			 (const_int 8)
+			 (const_int 8))
+	(zero_extract:SI (match_operand 1 "ext_register_operand" "Q")
+			 (const_int 8)
+			 (const_int 8)))]
+  ""
+  "mov{b}\t{%h1, %h0|%h0, %h1}"
+  [(set_attr "type" "imov")
+   (set_attr "mode" "QI")])
+
+(define_insn "*insvqi_3"
   [(set (zero_extract:SI (match_operand 0 "ext_register_operand" "+Q")
 			 (const_int 8)
 			 (const_int 8))
