--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-02  Jeff Law  <law@redhat.com>
+
+	* config/darwin-driver.c (darwin_driver_init): Const-correctness
+	fixes for first_period and second_period variables.
+
 2017-01-02  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR target/78967
