--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,21 @@
+2017-01-03  Janne Blomqvist  <jb@gcc.gnu.org>
+
+        PR fortran/78534
+        PR fortran/66310
+        * gfortran.dg/dependency_49.f90: Change scan-tree-dump-times
+          due to gfc_trans_string_copy change to avoid
+          -Wstringop-overflow.
+        * gfortran.dg/repeat_4.f90: Use integers of kind C_SIZE_T.
+        * gfortran.dg/repeat_7.f90: New test for PR 66310.
+        * gfortran.dg/scan_2.f90: Handle potential cast in assignment.
+        * gfortran.dg/string_1.f90: Limit to ilp32 targets.
+        * gfortran.dg/string_1_lp64.f90: New test.
+        * gfortran.dg/string_3.f90: Limit to ilp32 targets.
+        * gfortran.dg/string_3_lp64.f90: New test.
+        * gfortran.dg/transfer_intrinsic_1.f90: Change
+          scan-tree-dump-times due to gfc_trans_string_copy change to
+          avoid -Wstringop-overflow.
+
 2017-01-02  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR target/78967
