--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-03  Pierre-Marie de Rodat  <derodat@adacore.com>
+
+	* dwarf2out.c (gen_enumeration_type_die): When
+	-gno-strict-dwarf, add a DW_AT_encoding attribute.
+
 2017-01-03  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/78965
