* doc/md.texi (Standard Names): Remove reference to Java frontend.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244023 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-03  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* doc/md.texi (Standard Names): Remove reference to Java frontend.
+
 2017-01-03  Pierre-Marie de Rodat  <derodat@adacore.com>
 
 	* dwarf2out.c (gen_enumeration_type_die): When
