gcc-dg.exp: support more than one digit in relative line number notation
gcc/testsuite/ChangeLog:
	* gcc.dg/dg-test-1.c: Add tests of relative line specifications
	with more than one digit.
	* lib/gcc-dg.exp (process-message): Support more than one digit
	in relative line specifications.



git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244024 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,10 @@
+2017-01-03  David Malcolm  <dmalcolm@redhat.com>
+
+	* gcc.dg/dg-test-1.c: Add tests of relative line specifications
+	with more than one digit.
+	* lib/gcc-dg.exp (process-message): Support more than one digit
+	in relative line specifications.
+
 2017-01-03  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/78965
