* doc/invoke.texi (RS6000 options): LRA is enabled by default.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244035 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/doc/invoke.texi
+++ b/gcc/doc/invoke.texi
@@ -21184,8 +21184,7 @@ This switch has been deprecated.  Use @option{-misel} and
 
 @item -mlra
 @opindex mlra
-Enable Local Register Allocation.  This is still experimental for PowerPC,
-so by default the compiler uses standard reload
+Enable Local Register Allocation. By default the port uses LRA.
 (i.e. @option{-mno-lra}).
 
 @item -mspe
