--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-03  David Edelsohn  <dje.gcc@gmail.com>
+
+	* doc/invoke.texi (RS6000 options): LRA is enabled by default.
+
 2017-01-03  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* doc/invoke.texi (SPARC options): Document -mlra as the default.
