PR tree-optimization/78696 - [7 Regression] -fprintf-return-value misoptimizes %.Ng where N is greater than 10
gcc/ChangeLog:

	PR tree-optimization/78696
	* gimple-ssa-sprintf.c (format_floating): Correct handling of
	precision.  Use MPFR for %f for greater fidelity.  Correct handling
	of %g.
	(pass_sprintf_length::compute_format_length): Set width and precision
	specified by asrerisk to void_node for vararg functions.
	(try_substitute_return_value): Adjust dump output.

gcc/testsuite/ChangeLog:

	PR tree-optimization/78696
	* gcc.dg/tree-ssa/builtin-sprintf-5.c: Remove incorrect test cases.
	* gcc.dg/tree-ssa/builtin-sprintf-warn-7.c: Correct off-by-1 errors.
	* gcc.dg/tree-ssa/builtin-sprintf-warn-9.c: New test.
	* gcc.dg/tree-ssa/builtin-sprintf.c: Add test cases.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244037 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,13 @@
+2017-01-03  Martin Sebor  <msebor@redhat.com>
+
+	PR tree-optimization/78696
+	* gimple-ssa-sprintf.c (format_floating): Correct handling of
+	precision.  Use MPFR for %f for greater fidelity.  Correct handling
+	of %g.
+	(pass_sprintf_length::compute_format_length): Set width and precision
+	specified by asrerisk to void_node for vararg functions.
+	(try_substitute_return_value): Adjust dump output.
+
 2017-01-03  David Edelsohn  <dje.gcc@gmail.com>
 
 	* doc/invoke.texi (RS6000 options): LRA is enabled by default.
