gcc/: 	* godump.c (go_format_type): Treat ENUMERAL_TYPE like 	INTEGER_TYPE. gcc/testsuite/: 	* gcc.misc-tests/godump-1.c: Update for accurate representation of 	enums.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244041 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-03  Ian Lance Taylor  <iant@google.com>
+
+	* godump.c (go_format_type): Treat ENUMERAL_TYPE like
+	INTEGER_TYPE.
+
 2017-01-03  Martin Sebor  <msebor@redhat.com>
 
 	PR tree-optimization/78696
